Bug 1104410 - Check mVideoDecoder before usage to prevent nullptr crash - r=kinetik